--- a/Winter 20/175/HW5/hw5.tex
+++ b/Winter 20/175/HW5/hw5.tex
@@ -58,7 +58,7 @@
 	\end{enumerate}
 
 	\item Three gamblers each roll a six-sided die. Find the number of ways for their rolls to sum to 14. \textit{Hint: The generating function approach is good here.}
-	\vfill
+	\vfill%pg 196
 
 
 	\item Suppose there are $n$ companies and $n$ applicants. Each company ranks the applicants in order of preference and each applicant ranks the companies in the same way.
