--- a/Winter 20/271B/HW3/hw3.tex
+++ b/Winter 20/271B/HW3/hw3.tex
@@ -161,7 +161,7 @@ Show that the following processes are Martingales.
 		\]
 		Since $(dB_t)^2 = dt$, the first and third terms on the right-hand side cancel. Integrating from $0$ to $t$ gives
 		\[
-		e^{t/2}\cos(B_t) = 1 - \int_0^te^{t/2}\sin(B_t)\ dt.
+		e^{t/2}\cos(B_t) = 1 - \int_0^te^{s/2}\sin(B_s)\ ds.
 		\]
 		Since the It\^o integral is a martingale and adding a constant to a martingale yields a martingale, the above quantity is a martingale.
 	\end{proof}
