--- a/Winter 20/270B/HW3/hw3.tex
+++ b/Winter 20/270B/HW3/hw3.tex
@@ -109,6 +109,12 @@ Let $(X_n)$ be a martingale that is bounded a.s. either above or below by some c
 \end{proof}
 
 \noindent\textbf{Problem 5. }
-
+Let $Z_1, Z_2, \ldots$ be nonnegative iid random variables with $\E[Z_i] = 1$ and $\Prob[Z_i = 1]<1$. Show that as $n\to \infty$,
+\[
+\prod_{i=1}^n Z_i\to 0\quad\text{a.s.}
+\]
+\begin{proof}
+	
+\end{proof}
 
 \end{document}
