--- a/Winter 20/270B/HW3/hw3.tex
+++ b/Winter 20/270B/HW3/hw3.tex
@@ -105,7 +105,8 @@ Give an example of a martingale $(X_n)$ such that $X_n\to -\infty$ a.s.
 \noindent\textbf{Problem 4. }
 Let $(X_n)$ be a martingale that is bounded a.s. either above or below by some constant $M$. Show that $\sup_n \E|X_n|<\infty$.
 \begin{proof}
-	If $X_n$ is bounded below, then $X_n+M$ is a nonnegative martingale. By the martingale convergence theorem, $X_n+M$ converges almost surely to some limit $Y$ with $\E|Y|<\infty$. Consequently, $X_n$ also converges a.s. to an integrable function, so $\sup_n \E|X_n|<\infty$. If $X_n$ is bounded above, then $-X_n+M$ is a nonnegative martingale and the same argument works.
+	The main idea is that a nonnegative martingale $(X_n)$ converges a.s. to some $X$ and $\E[X]\leq \E[X_1]$. This is a theorem in Durrett. We establish it by noting that our proof of the Martingale convergence theorem actually shows that we need only assume that $\sup_n\E[X_n^+]<\infty$ in order to guarantee a.s. convergence. Once we have this, note that $-X_n \leq 0$ is a martingale with $\E[(-X_n)^+] = 0$, so by martingale convergence, $X_n$ converges a.s. to some $X$ and $\E[X_1] \geq \E[X]$ by Fatou.\\
+	\noindent Now if $X_n$ is bounded below, then $X_n+M$ is a nonnegative martingale. By the martingale convergence theorem, $X_n+M$ converges almost surely to some limit $Y$ with $\E|Y|<\infty$. Consequently, $X_n$ also converges a.s. to an integrable function, so $\sup_n \E|X_n|<\infty$. If $X_n$ is bounded above, then $-X_n+M$ is a nonnegative martingale and the same argument works.
 \end{proof}
 
 \noindent\textbf{Problem 5. }
@@ -172,8 +173,59 @@ to be the size of the population at time $n+1$, where all $X_i^{(k)}$ are iid ra
 
 	\item Deduce that $(Y_n)$ is bounded in $L^2$ if and only if $\mu>1$.
 	\begin{proof}
-		
+		We have
+		\[
+		\E[Y_n^2] = \frac{1}{\mu^{2n}}\E[\E[Z_n^2|\mcal{F}_{n-1}]] = \frac{1}{\mu^{2n}}(\mu^2\E[Z_{n-1}^2] + \sigma^2\mu^{n-1}) = \E[Y_{n-1}^2] + \frac{\sigma^2}{\mu^{n+1}}.
+		\]
+		Summing over $n$ and using $Y_0 = 1$ gives
+		\[
+		\E[Y_n^2] = \begin{cases}
+			1+n\sigma^2&\text{if }\mu=1\\
+			1+\frac{\sigma^2}{\mu^2-\mu}(1-\frac{1}{\mu^n})&\text{otherwise}
+		\end{cases}.
+		\]
+		If $n\leq 1$, this quantity tends toward $\infty$ and it tends toward $\frac{\sigma^2}{\mu^2-\mu}$ otherwise.
+	\end{proof}
+
+	\item Show that when $\mu>1$, the $L^2$ limit $Y$ of $Y_n$ satisfies
+	\[
+	\Var[Y] = \frac{\sigma^2}{\mu(\mu-1)}.
+	\]
+	\begin{proof}
+		Assuming we have convergence in $L^2$, we have
+		\[
+		\Var[Y] = \E[Y^2] - \E[Y]^2 = \lim_{n\to \infty}\E[Y_n^2] - 1 = \lim_{n\to \infty}\frac{\sigma^2}{\mu(\mu-1)}\left(1-\frac{1}{\mu^n}\right) = \frac{\sigma^2}{\mu(\mu-1)}.
+		\]
 	\end{proof}
 \end{enumerate}
+
+\noindent\textbf{Problem 8. }
+Find an example of a martingale $(X_n)$ that converges a.s. to some random variable $X$, but for which $\limsup_n \E|X_n| = \infty$.
+\begin{solution}
+	Define the sequence $(a_n)$ by
+	\[
+	a_1 = 2,\quad a_n = 4\sum_{i=1}^n a_i.
+	\]
+	Also define the independent random variables $Z_n$ by
+	\[
+	Z_n = \begin{cases}
+		a_n&\text{with probability }1/(2n^2)\\
+		0&\text{with probability }1-n^{-2}\\
+		-a_n&\text{with probability }1/(2n^2)
+	\end{cases}.
+	\]
+	Finally, define $X_n$ by $X_n = \sum_{i=1}^n Z_i$. Since each $Z_i$ is centered, $X_n$ is clearly a martingale with respect to the filtration $\mcal{F}_n=\sigma(Z_1, \ldots, Z_n)$.\\
+
+	\noindent Now $\Prob[Z_n]\neq 0 = \frac{1}{n^2}$. Since this quantity is summable, we have by Borel-Cantelli that $\Prob[Z_n \neq 0\text{ i.o.}] = 0$. Consequently, $X_n$ converges almost surely.\\
+
+	\noindent If $Z_n \neq 0$, the minimum possible value for $X_n$ is
+	\[
+	a_n - \sum_{i=1}^{n-1}a_i = \frac{3}{4}a_n,
+	\]
+	which corresponds to taking a step of size $a_n$ in one direction and every previous step having size $a_i$ in the opposite direction. By induction we have $a_n = 8\cdot 5^{n-2}$ for $n\geq 3$.  The probability of taking this step is at least $1/(2n^2)$, so by Markov's inequality we have
+	\[
+	\E|X_n| \geq \frac{3}{4}a_n\Prob\left[|X_n| \geq \frac{3}{4}a_n\right] \geq \frac{3}{4} \cdot (8\cdot 5^{n-2})\cdot \frac{1}{2n^2}\to \infty.
+	\]
+\end{solution}
 
 \end{document}
