--- a/Winter 20/175/HW8/hw8.tex
+++ b/Winter 20/175/HW8/hw8.tex
@@ -40,7 +40,8 @@
 \end{center}
 
 \begin{enumerate}
-	\item Find the number of $n$-digit quaternary sequences (each digit is 0, 1, 2, or 3) that contain an odd number of 0's, an even number of 1's, and at least one 3.
+	%\item Find the number of $n$-digit quaternary sequences (each digit is 0, 1, 2, or 3) that contain an odd number of 0's, an even number of 1's, and at least one 3.
+	\item A bin contains infinitely many indistinguishable red, blue, green, and yellow balls. How many ways are there to choose (order doesn't matter) $n$ balls that contain an odd number of red balls, an even number of green balls, and at least one yellow ball?
 	\vfill
 	\item For $m, n\in \naturals$, let $\mcal{M}$ be the set of all $m\times n$ matrices whose entries are zeros or ones. Let 
 	\[
@@ -55,7 +56,7 @@
 	\sum_{i=1}^n(-1)^{i-1}\binom{n}{i}(2^{n-i}-1)^m.
 	\]
 	\vfill
-	\item Let $S_1, S_2, \ldots, S_{50}$ be subsets of a finite set $S$ such that any subset has more than half of the number of elements of $S$. Prove that there exists a subset of $S$ with at most 5 elements that has nonempty intersection with each of the 50 subsets. \textit{Hint: let $S = \{s_1, \ldots, s_n\}$ and for $s\in S$ define $d(i)$ to be the number of subsets among $S_1, \ldots, S_{50}$ that contain $s_i$. Consider the sum}
+	\item Let $S_1, S_2, \ldots, S_{50}$ be subsets of a finite set $S$ such that any subset has more than half of the number of elements of $S$. Prove that there exists a subset of $S$ with at most 5 elements that has nonempty intersection with each of the 50 subsets. \textit{Hint: let $S = \{s_1, \ldots, s_n\}$ and for $s_i\in S$ define $d(i)$ to be the number of subsets among $S_1, \ldots, S_{50}$ that contain $s_i$. Consider the sum}
 	\[
 	d(1) + d(2) + \cdots +d(n).
 	\]
